--- a/NotesAPI/appsettings.json
+++ b/NotesAPI/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "G8f740F4#kHf0C%k#df30Vl55&C*3mdVod7F8cj2pDV9d2phZkcgs3%29Cv9&xpzQq#mfjsodd830V4mx*f4kc9Dsdf983dF*093D38GFDASsdj3D3kjDFGs"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLOCALDB;Database=NotesDB;Trusted_Connection=True;ConnectRetryCount=3"
+    "DefaultConnection": "server=localhost\\sqlexpress;database=NotesDB;trusted_connection=true;TrustServerCertificate=True;ConnectRetryCount=3"
   },
   "Logging": {
     "LogLevel": {
